--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!Doctype HTML>
 <HTML>
 <Head>
-<Title>Ansari Salman</Title>
+<Title>Ansari Salman | Developer</Title>
 </Head>
 <Body>
-<H1>Portfolio</H1>
+<H1>Hi.My name is <span style=color:red>Ansari Salman</span></H1>
 </Body>
 </HTML>
