--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!Doctype HTML>
 <HTML>
 <Head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <Title>Ansari Salman | Developer</Title>
 </Head>
 <Body>
-<H1>Hi.My name is <span style=color:red>Ansari Salman</span></H1>
+<H1>Hi,My name is <span style=color:#66e7f2;font-weight: bold;>Ansari Salman</span></H1>
 </Body>
 </HTML>
