--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <Title>Ansar Salman | Developer</title>
 </head>
 <Body>
-<H1>Hi, My name is<span style=color:#3d3d3d>Ansari Salman
-</span> I am software developer</H1>
+<div>
+<H1>Hi,My name is <span style=color:#66e7f2;font-weight:bold>Ansari Salman</span></H1>
+<p>Under Development</p>
+</div>
 </Body>
 </Html>
