--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <Head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <Title>Ansar Salman | Developer</title>
 </head>
 <Body>
