--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-	<link rel="shortcut icon" type="image/png" href="./asset/favicon.png" />
+	<link rel="icon" href="http://example.com/favicon.png">
+	<link rel="shortcut icon" type="image/png" href="/asset/favicon.png" />
 	<meta name="keywords" content="ansari-salman, Ansari Salman, JavaScript,Html,Css" />
 
 	<meta name="description" content="Ansari Salman | Developer" />
     <title>Ansari Salman | Developer</title>
-    <!--<link href="css/star.css" rel="stylesheet">-->
+    
     <link href="css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
 
   <body>
     <section id="top">
-
 	  <div class="top-container">
 		<div id="stars"></div>
 		<div id="stars2"></div>
