--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 		  In final year I have made web app project on Bus reservation system
 		  I have one year of experience in Android app Developement
 		  and Built many webview apps and published it on Google Play Store. 
-		  Now, I am fully focused on
-		  App
-		  Development
+		  In Free time, watching others Github Repsitory
 		</p>
 		<a target="_blank" class="cta-btn cta-btn--resume"
 		  href="asset/Salman_CV.pdf">View Resume</a>
