--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-	<link rel="icon" href="http://example.com/favicon.png">
-	<link rel="shortcut icon" type="image/png" href="/asset/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="/asset/favicon.ico" />
 	<meta name="keywords" content="ansari-salman, Ansari Salman, JavaScript,Html,Css" />
 
 	<meta name="description" content="Ansari Salman | Developer" />
