--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		  In final year I have made web app project on Bus reservation system
 		  I have one year of experience in Android app Developement
 		  and Built many webview apps and published it on Google Play Store. 
-		  In Free time, watching others Github Repsitory
+		  Now Iam focused on App Development.
 		</p>
 		<a target="_blank" class="cta-btn cta-btn--resume"
 		  href="asset/Salman_CV.pdf">View Resume</a>
