--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <section id="top">
-	  <div class="top-container">
+	 <div class="top-container">
 		<div id="stars"></div>
 		<div id="stars2"></div>
 		<div id="stars3"></div>
@@ -37,7 +37,7 @@
 		<h2>About</h2>
 		<p>
 		  My Name is Ansari Salman.I am a BCS Student graduate from M S G College of Malegaon. However, I have learned
-		  software development on my own.
+		  Programming Language on my own.I'm passionate about coding
 		  In final year I have made web app project on Bus reservation system
 		  I have one year of experience in Android app Developement
 		  and Built many webview apps and published it on Google Play Store. 
