--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		  Now Iam focused on App Development.
 		</p>
 		<a target="_blank" class="cta-btn cta-btn--resume"
-		  href="asset/Salman_CV.pdf">View Resume</a>
+		  href="">View Resume</a>
 	  </div>
     </section>
 	<section id="project">
