--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-	  
-	<link rel="apple-touch-icon" sizes="180x180" href="/asset/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/asset/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/asset/favicon-16x16.png">
-	<link rel="manifest" href="/asset/site.webmanifest">
 	<link rel="icon" type="image/png" href="/asset/favicon.ico" />
 	<meta name="keywords" content="ansari-salman, Ansari Salman, JavaScript,Html,Css" />
 
@@ -49,7 +44,7 @@
 		  Now I am focused on App Development.
 		</p>
 		<a target="_blank" class="cta-btn cta-btn--resume"
-		  href="">View Resume</a>
+		  href="https://drive.google.com/file/d/15a_vcEMJlHq-lT6NCchhx-3JcA8Vfmjl/view?usp=drivesdk">View Resume</a>
 	  </div>
     </section>
 	<section id="project">
