--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 <!-- 	<link rel="icon" type="image/png" href="/asset/favicon.ico" /> -->
-	  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+	  <link rel="apple-touch-icon" sizes="180x180" href="/asset/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/asset/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/asset/favicon-16x16.png">
+<link rel="manifest" href="/asset/site.webmanifest">
 	<meta name="keywords" content="ansari-salman, Ansari Salman, JavaScript,Html,Css" />
 
 	<meta name="description" content="Hi,I am Ansari Salman I'm a software Developer" />
