--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="asset/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="asset/favicon-16x16.png">
 	<link rel="manifest" href="asset/site.webmanifest">
-	<meta property="og:title" content=Ansari Salman">
-	<meta property="og:description" content="Hi, I am Ansari Salman I'm a Software Developer">
+									  
+	  <!-- Facebook Meta Tags -->
+  	<meta property="og:url" content="https://ansari-salman.github.io/Portfolio/">
+  	<meta property="og:type" content="website">
+ 	 <meta property="og:title" content="Ansari Salman | Developer">
+  	<meta property="og:description" content="Hi, I am Ansari Salman and I'm a Software Developer">
+  	<meta property="og:image" content="https://raw.githubusercontent.com/ansari-salman/Portfolio/main/asset/og_image.png">
+	
+	  <!-- Twitter Meta Tags -->
+  	<meta name="twitter:card" content="summary_large_image">
+  	<meta property="twitter:domain" content="ansari-salman.github.io">
+  	<meta property="twitter:url" content="https://ansari-salman.github.io/Portfolio/">
+  	<meta name="twitter:title" content="Ansari Salman | Developer">
+  	<meta name="twitter:description" content="Hi, I am Ansari Salman and I'm a Software Developer">
+  	<meta name="twitter:image" content="https://raw.githubusercontent.com/ansari-salman/Portfolio/main/asset/og_image.png">
 
-	<meta property="og:url" content="https://ansari-salman.github.io/Portfolio/">
-
-	<meta property="og:image"
-		content="https://raw.githubusercontent.com/ansari-salman/Portfolio/main/asset/og_image.png">
-
-	<meta name="keywords"
-		content="ansari-salman, Ansari Salman, JavaScript, Html, CSS, Android Developer, Flutter Developer" />
+	<meta name="keywords" content="ansari-salman, Ansari Salman, JavaScript, Html, CSS, Android Developer, Flutter Developer, Developer" />=
+        
 
 	<meta name="description" content="Hi, I am Ansari Salman and I'm a Software Developer" />
 	<title>Ansari Salman | Developer</title>
