--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   	<meta name="twitter:description" content="Hi, I am Ansari Salman and I'm a Software Developer">
   	<meta name="twitter:image" content="https://raw.githubusercontent.com/ansari-salman/Portfolio/main/asset/og_image.png">
 
-	<meta name="keywords" content="ansari-salman, Ansari Salman, JavaScript, Html, CSS, Android Developer, Flutter Developer, Developer" />=
+	<meta name="keywords" content="ansari-salman, Ansari Salman, JavaScript, Html, CSS, Android Developer, Flutter Developer, Developer" />
         
 
 	<meta name="description" content="Hi, I am Ansari Salman and I'm a Software Developer" />
